fix: layout issue

--- a/client/app/(auth-pages)/sign-up/sign-up.module.css
+++ b/client/app/(auth-pages)/sign-up/sign-up.module.css
@@ -1,7 +1,9 @@
 .container {
    display: flex;
    min-height: 100vh;
+   width: 100%;
    flex-direction: column;
+   padding:0 0.5rem;
  }
  
  .formContainer {
